# Customer-Churn

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: churn-prediction-ci.yml
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
models/: dt_model.joblib  ensemble_model.joblib  lr_model.joblib  rf_model.joblib
results/: test_predictions_20250308_045421.csv  test_predictions_20250308_045657.csv  test_predictions_20250308_045708.csv
src/: config.py
src/data/: data_loader.py  data_preprocessor.py
src/evaluation/: metrics.py
src/features/: feature_engineering.py
src/models/: cross_validation.py  decision_tree.py  ensemble.py  logistic_regression.py  model_factory.py
src/pipeline/: base.py  data_pipeline.py  evaluation_pipeline.py  feature_pipeline.py  main_pipeline.py  model_pipeline.py  visualization_pipeline.py
src/utils/: logger.py
src/visualization/: advanced_model_visualizer.py  eda_visualizer.py  model_visualizer.py
