[project]
name = "churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==23.3.0",
    "dash==2.11.1",
    "joblib==1.2.0",
    "matplotlib==3.7.1",
    "notebook==6.5.4",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "plotly==5.15.0",
    "pylint==2.17.4",
    "pytest==7.3.1",
    "python-dotenv==1.0.0",
    "pyyaml==6.0",
    "scikit-learn==1.2.2",
    "seaborn==0.12.2",
]
